# usermgr

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_ja.md  pyproject.toml
etc/activity/scripts/: create_dynamodb.sh  create_function.sh  update_function.sh
etc/activity/src/: activity.py
etc/download_jwks/: README.md
etc/download_jwks/scripts/: create_function.sh  create_role.sh  execute_function.sh  update_function.sh
etc/download_jwks/src/: usermgr_dl_jwks.py
etc/lambda/: README.md
etc/lambda/scripts/: execute_function.sh
etc/lambda/src/: usermgr.py
etc/role/scripts/: create_role.sh
etc/usermgr/scripts/: create_function.sh  create_role.sh  update_function.sh
platform/converter/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
platform/converter/src/: brandMapper.ts  cssParser.ts  index.ts  tfGenerator.ts  types.ts  utils.ts
platform/terraform/: .gitignore  .terraform.lock.hcl  README_ja.md  cognito.tf  terraform.tfstate  terraform.tfstate.backup  users.tf
platform/terraform/cognito/: .terraform.lock.hcl  brand.tf  cognito.tf  variables.tf
platform/terraform/iamuser/: variables.tf
tests/: test_cognito.py  test_factory.py  test_lambda.py
testui/: components.json  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.js  tsconfig.json
testui/src/: main.tsx
testui/src/app/: App.tsx
tools/: .gitignore  README.md  bun.lockb  devdoc.md  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.js  tsconfig.json
tools/src/: environ.json.sample  index.tsx  main.tsx  routeTree.gen.ts
tools/src/components/: app-settings.tsx  app-sidebar.tsx  group-list.tsx  user-create-form.tsx  user-list.tsx
usermgr/: Factory.py  base.py  cognito.py
usermgr/providers/: cognito.py  lambda.py
(+14 files in other folders)
