[tool.poetry]
name = "usermgr"
version = "0.0.1"
description = ""
authors = ["tamuto <tamuto@infodb.jp>"]
readme = "README.md"
homepage = "https://github.com/tamuto/usermgr"
repository = "https://github.com/tamuto/usermgr"

packages = [
    { include="usermgr", from="." }
]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
