[tool.poetry]
name = "usermgr"
version = "0.2.1"
description = ""
authors = ["tamuto <tamuto@infodb.jp>"]
readme = "README.md"
homepage = "https://github.com/tamuto/usermgr"
repository = "https://github.com/tamuto/usermgr"

packages = [
    { include="usermgr", from="." }
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = {version = "^1.26.54", optional = true}

[tool.poetry.extras]
cognito = ["boto3"]
lambda = ["boto3"]

[tool.poetry.group.dev.dependencies]
python-dotenv = {extras = ["cli"], version = "^0.21.1"}
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
